# MyWallet

./: .gitignore  AUTHORS  Account.cpp  Account.h  CMakeLists.txt  Config.cpp  Config.h  ManagedWallets.cpp  ManagedWallets.h  Messages.sh  MyWalletConfig.h.in  QmlClipboardAdapter.cpp  QmlClipboardAdapter.h  Wallet.cpp  Wallet.h  WalletsModel.cpp  WalletsModel.h  main.cpp  models.qrc  qml.qrc  qtquickcontrols2.conf  styles.qrc  ui.qrc
app/: Config.cpp  Config.h  QmlClipboardAdapter.cpp  QmlClipboardAdapter.h  eu.catwitch.mywallet.desktop  main.cpp  ui.qrc
app/ui/: ColorSelector.qml  SecondaryLabel.qml  SolarizedPalette.qml  TickingTimer.qml  WalletPage.qml  main.qml
app/ui/account/: AccountCreation.qml  AccountCreationForm.ui.qml  AccountCreationSheet.qml  AccountEdition.qml  AccountEditionForm.ui.qml  AccountEditionSheet.qml  AccountEditor.qml  AccountEditorForm.ui.qml  AccountEditorPage.qml  AccountItem.qml  AccountItemForm.ui.qml  AccountView.qml  AccountViewForm.ui.qml  AccountViewPage.qml  AccountsPage.qml  FieldItem.qml  FieldItemForm.ui.qml
app/ui/folder/: CreateFolderDialog.qml  FolderCreation.qml  FolderCreationForm.ui.qml  FolderCreationSheet.qml  (+3 more)
core/: Account.cpp  Account.h  Backend.cpp  Backend.h  Folder.cpp  Folder.h  KWalletBackend.cpp  KWalletBackend.h  ManagedWallets.cpp  ManagedWallets.h  Trash.cpp  Trash.h  Wallet.cpp  Wallet.h
models/: WalletsModel.qml
styles/Solarized/: Drawer.qml  ItemDelegate.qml  Label.qml  Page.qml  Pane.qml  Theme.qml  ToolBar.qml
ui/: AccountCreate.qml  AccountCreateForm.ui.qml  AccountCreation.qml  AccountCreationForm.ui.qml  AccountCreationSheet.qml  AccountEditor.qml  AccountEditorForm.ui.qml  AccountEditorPage.qml  AccountItem.qml  AccountItemForm.ui.qml  AccountView.qml  AccountViewForm.ui.qml  AccountsPage.qml  ColorSelector.qml  CreateAccountDialog.qml  CreateFolderDialog.qml  DrawerSwipeDelegate.qml  FolderItem.qml  FolderItemForm.ui.qml  FoldersPage.qml  FoldersSidebar.qml  PasswordSwipeItem.qml  RemovedSwipeItem.qml  SecondaryLabel.qml  Sidebar.qml  SidebarForm.ui.qml  SolarizedPalette.qml  TickingTimer.qml  TitleBar.qml  WalletItem.qml  WalletPage.qml  WalletPageForm.ui.qml  WalletPanel.qml  WalletPanelForm.ui.qml  WalletsModel.qml  main.qml
ui/+material/: DrawerSwipeDelegate.qml  TitleBar.qml
ui/account/: AccountEditorForm.ui.qml  AccountItemForm.ui.qml
ui/dialogs/: ColorSelector.qml  CreateAccountDialog.qml  CreateFolderDialog.qml
ui/folder/: FolderItem.qml
ui/sidebar/: ActiveItem.qml  FolderItem.qml  FolderSwipeItem.qml  FoldersSidebar.qml
ui/widgets/: AccountView.qml  AccountViewForm.ui.qml  PageHeader.qml  PageHeaderForm.ui.qml  WalletButton.qml  WalletButtonForm.ui.qml
